// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState should render empty state component styles of type error 1`] = `
<div
  className="css-q1uf87"
  direction="row"
  width="100%"
>
  <text
    className="css-rsymv"
    fontFamily="IBM Plex Sans"
  >
    An error has occured
  </text>
</div>
`;

exports[`EmptyState should render empty state component styles of type loading 1`] = `
<div
  className="css-q1uf87"
  direction="row"
  width="100%"
>
  <text
    className="css-rsymv"
    fontFamily="IBM Plex Sans"
  >
    loading...
  </text>
</div>
`;
